--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "jest": "^29.5.0",
     "jsdom": "^21.1.1",
+    "json": "^11.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-dts": "^2.2.0",
